--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6957,6 +6957,8 @@
     <string name="vpn_disconnect">Disconnect</string>
     <!-- Field label to show the version number for a VPN app. [CHAR LIMIT=40] -->
     <string name="vpn_version">Version</string>
+    <!-- Field label to show the version number for a VPN app dialog. [CHAR LIMIT=40] -->
+    <string name="vpn_version_info">Version <xliff:g id="version" example="3.3.0">%s</xliff:g></string>
     <!-- Button label to forget a VPN profile [CHAR LIMIT=40] -->
     <string name="vpn_forget_long">Forget VPN</string>
     <!-- Dialog message title to set another VPN app to be always-on [CHAR LIMIT=40] -->
