--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13725,8 +13725,10 @@
     <string name="audio_streams_main_page_password_dialog_join_button">Listen to stream</string>
     <!-- Le audio streams main page qr code scanner summary [CHAR LIMIT=NONE] -->
     <string name="audio_streams_main_page_qr_code_scanner_summary">Scan an audio stream QR code to listen with <xliff:g example="LE headset" id="device_name">%1$s</xliff:g></string>
-    <!-- Le audio streams password dialog  [CHAR LIMIT=NONE] -->
+    <!-- Le audio streams password dialog not editable message [CHAR LIMIT=NONE] -->
     <string name="audio_streams_main_page_password_dialog_cannot_edit">Can\u0027t edit password while sharing. To change the password, first turn off audio sharing.</string>
+    <!-- Le audio streams password dialog password format alert [CHAR LIMIT=NONE] -->
+    <string name="audio_streams_main_page_password_dialog_format_alert">Your password must contain 4-16 characters and use only letters, numbers and symbols</string>
     <!-- Text for audio sharing qrcode scanner [CHAR LIMIT=none]-->
     <string name="audio_streams_qr_code_scanner_label">QR code scanner</string>
     <!-- Learn more link for audio sharing qrcode [CHAR LIMIT=none]-->
